# mycmake

./: CMakeLists.txt  build.bat  build_cmd.bat  build_custom.bat
include/: cmake_file.h  my_fs.h  my_sys.h  vcxproj_file.h  vcxproj_parser.h  xml_adapter.h
src/: book.cpp  cmake_file.cpp  cmake_file.h  main.cpp  my_fs.cpp  my_fs.h  pic.cpp  vcxproj_file.cpp  vcxproj_file.h  vcxproj_parser.cpp  vcxproj_path.cpp  vcxproj_path.h  xml_adapter.cpp  xml_adapter.h
